# docs/openapi.yaml
@@ -133,7 +133,68 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '500':
           $ref: '#/components/responses/GeneralError'
-
+/auth/send-reset-email:
+    post:
+      tags:
+        - auth
+      summary: Send password reset email
+      operationId: sendResetEmail
+      description: Send a password reset email to the user.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SendResetEmailRequest'
+      responses:
+        '200':
+          description: Reset password email has been successfully sent
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SuccessResponse'
+        '404':
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          $ref: '#/components/responses/GeneralError'
+  /auth/reset-pwd:
+    post:
+      tags:
+        - auth
+      summary: Reset password
+      operationId: resetPassword
+      description: Reset the password of the user using the provided token.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ResetPasswordRequest'
+      responses:
+        '200':
+          description: Password has been successfully reset
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SuccessResponse'
+        '401':
+          description: Token is expired or invalid
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '404':
+          description: User not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          $ref: '#/components/responses/GeneralError'
   /users/avatar:
     patch:
       tags:
@@ -284,7 +345,15 @@ components:
         accessToken:
           type: string
           example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
-
+    SendResetEmailRequest:
+      type: object
+      required:
+        - email
+      properties:
+        email:
+          type: string
+          format: email
+          example: john.doe@example.com
     SuccessResponse:
       type: object
       properties:
@@ -294,7 +363,19 @@ components:
         message:
           type: string
           example: User profile updated successfully
-
+    ResetPasswordRequest:
+      type: object
+      required:
+        - token
+        - password
+      properties:
+        token:
+          type: string
+          example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+        password:
+          type: string
+          format: password
+          example: newpassword123
     ErrorResponse:
       type: object
       properties:
