# src/controllers/auth.js
@@ -1,5 +1,6 @@
 import bcrypt from 'bcrypt';
 import createHttpError from 'http-errors';
+import { requestResetToken } from '../services/auth.js';
 
 import {
   registerUser,
@@ -7,12 +8,14 @@ import {
   logoutUser,
   refreshUsersSession,
   createProfile,
+  resetPassword
 } from '../services/auth.js';
 import { REFRESH_TOKEN_TTL } from '../constants/index.js';
 import { UsersCollection } from '../db/models/user.js';
 import { saveFileToUploadDir } from '../utils/saveFileToUploadDir.js';
 import { saveFileToCloudinary } from '../utils/saveFileToCloudinary.js';
 import { env } from '../utils/env.js';
+
 // registerUserController
 export const registerUserController = async (req, res) => {
   const user = await registerUser(req.body);
@@ -136,94 +139,6 @@ export const getProfileInfoController = async (req, res) => {
   }
   res.status(200).json(user);
 };
-// updateProfileInfoController
-// export const updateProfileInfoController = async (req, res) => {
-//   const userId = req.user._id;
-//   const user = await UsersCollection.findById(userId);
-
-//   if (!user) {
-//     throw createHttpError(404, 'User not found');
-//   }
-
-//   const allowedFields = ['name', 'gender', 'dailyNorma', 'password', 'email'];
-//   const fieldsToUpdate = {};
-
-//   Object.keys(req.body).forEach((field) => {
-//     if (allowedFields.includes(field)) {
-//       fieldsToUpdate[field] = req.body[field];
-//     }
-//   });
-
-//   if (Object.keys(fieldsToUpdate).length === 0) {
-//     throw createHttpError(400, 'No valid fields to update');
-//   }
-
-//   const updatedUser = await UsersCollection.findByIdAndUpdate(
-//     userId,
-//     { $set: fieldsToUpdate },
-//     { new: true },
-//   );
-//   res.status(200).json({
-//     status: 200,
-//     message: 'User profile updated successfully',
-//     data: updatedUser,
-//   });
-// };
-// export const updateProfileInfoController = async (req, res) => {
-//   const userId = req.user._id;
-//   const user = await UsersCollection.findById(userId);
-
-//   if (!user) {
-//     throw createHttpError(404, 'User not found');
-//   }
-
-//   const allowedFields = ['name', 'gender', 'dailyNorma', 'password', 'email'];
-//   const fieldsToUpdate = {};
-
-//   for (const field of Object.keys(req.body)) {
-//     if (allowedFields.includes(field)) {
-//       if (field === 'password') {
-//         const isPasswordMatch = await bcrypt.compare(
-//           req.body.password,
-//           user.password,
-//         );
-//         if (isPasswordMatch) {
-//           throw createHttpError(
-//             400,
-//             'New password must be different from the current password',
-//           );
-//         }
-//         fieldsToUpdate[field] = await bcrypt.hash(req.body[field], 10);
-//       } else if (field === 'email') {
-//         if (req.body.email === user.email) {
-//           throw createHttpError(
-//             400,
-//             'New email must be different from the current email',
-//           );
-//         }
-//         fieldsToUpdate[field] = req.body[field];
-//       } else {
-//         fieldsToUpdate[field] = req.body[field];
-//       }
-//     }
-//   }
-
-//   if (Object.keys(fieldsToUpdate).length === 0) {
-//     throw createHttpError(400, 'No valid fields to update');
-//   }
-
-//   const updatedUser = await UsersCollection.findByIdAndUpdate(
-//     userId,
-//     { $set: fieldsToUpdate },
-//     { new: true },
-//   );
-
-//   res.status(200).json({
-//     status: 200,
-//     message: 'User profile updated successfully',
-//     data: updatedUser,
-//   });
-// };
 export const updateProfileInfoController = async (req, res) => {
   const userId = req.user._id;
   const user = await UsersCollection.findById(userId);
@@ -290,4 +205,22 @@ export const createProfileController = async (req, res) => {
 
   const user = await createProfile(userData);
   res.status(201).json(user);
+};
+// requestResetEmailController
+export const requestResetEmailController = async (req, res) => {
+  await requestResetToken(req.body.email);
+  res.json({
+    message: 'Reset password email was successfully sent!',
+    status: 200,
+    data: {},
+  });
+};
+// resetPasswordController
+export const resetPasswordController = async (req, res) => {
+  await resetPassword(req.body);
+  res.json({
+    message: 'Password was successfully reset!',
+    status: 200,
+    data: {},
+  });
 };
