# src/validation/auth.js
@@ -16,3 +16,10 @@ export const updateProfileInfoSchema = Joi.object({
   newPassword: Joi.string().min(8).max(64),
   confirmPassword: Joi.ref('newPassword'),
 }).with('newPassword', 'confirmPassword');
+export const requestResetEmailSchema = Joi.object({
+  email: Joi.string().email().required(),
+});
+export const resetPasswordSchema = Joi.object({
+  password: Joi.string().required(),
+  token: Joi.string().required(),
+});
